# ChangeLog for app-dicts/stardict
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/stardict/Attic/ChangeLog,v 1.18 2004/08/19 21:40:04 foser Exp $

  19 Aug 2004; foser <foser@gentoo.org> stardict-2.2.1,2.4.1.ebuild :
  Also fix for gtk+-2.4 issues (#45791)

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> stardict-2.4.2.ebuild:
  Add inherit eutils

  22 Apr 2004; <khai@gentoo.org> +files/stardict-gtk24.patch,
  stardict-2.4.2.ebuild:
  Applied patch to fix compilation against gtk+-2.4.

  06 Mar 2004; Alastair Tse <liquidx@gentoo.org> stardict-2.4.2.ebuild:
  make tools executable (#43719)

*stardict-2.4.2 (07 Jan 2004)

  07 Jan 2004; Alastair Tse <liquidx@gentoo.org> stardict-2.4.1.ebuild,
  stardict-2.4.2.ebuild:
  version bump. 2.4.2 requires a new modified dictionary format. you'll have to
  remerge your dictionaries to the same version 2.4.2

*stardict-2.4.1 (30 Oct 2003)

  30 Oct 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.4.0.ebuild:
  version bump

*stardict-2.4.0 (12 Sep 2003)

  12 Sep 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.0.0.ebuild,
  stardict-2.2.0.ebuild, stardict-2.2.1.ebuild, stardict-2.4.0.ebuild:
  version bump

  12 Sep 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.0.0.ebuild,
  stardict-2.2.0.ebuild, stardict-2.2.1.ebuild:
  removing bonobo deps and clean up

  09 Jul 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.0.0.ebuild,
  stardict-2.2.0.ebuild, stardict-2.2.1.ebuild:
  add pkgconfig dep

*stardict-2.2.1 (01 Jul 2003)

  01 Jul 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.2.0.ebuild,
  stardict-2.2.1.ebuild:
  version bump and bumping 2.2.0 to stable

  19 Jun 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.2.0.ebuild:
  digest fixes

*stardict-2.2.0 (04 Jun 2003)

  04 Jun 2003; Alastair Tse <liquidx@gentoo.org> stardict-2.2.0.ebuild:
  version bump. dictionary files are now distributed seperately. you must