@@ -3,9 +3,11 @@ MD5 b1119d84c7a4c3535572b94ec508e907 metadata.xml 215
 MD5 4de1e02f0a55218f4d20cbce2498168e stardict-2.2.1.ebuild 1795
 MD5 b7a9fac0edefcbde29a670228c9b1587 stardict-2.4.1.ebuild 1816
 MD5 3bc63bdc3041a6c266ac0bab2c9a1843 stardict-2.4.2.ebuild 1760
+MD5 3bc63bdc3041a6c266ac0bab2c9a1843 stardict-2.4.3.ebuild 1760
 MD5 3316b188ec45fd4d24db494c5990c20b files/digest-stardict-2.2.1 67
 MD5 38728c3a0ad675dd5f23d72cb143741a files/digest-stardict-2.4.1 67
 MD5 390090b978f088147ce59b0308822093 files/digest-stardict-2.4.2 67
 MD5 b41107d5daeb5414fa21b3f9905e105c files/stardict-config.sh 565
 MD5 40e8df6800d5f7bf138a3a6692854a56 files/stardict-gentoo.patch 547
 MD5 9f2bc974d89734beae9aa192bafc68ef files/stardict-gtk24.patch 1210
+MD5 666d327d13233da6a7b9842e01a4eda7 files/digest-stardict-2.4.3 67
