@@ -1,0 +1,1 @@
+MD5 a578782c9df8e985a32069d19bae0960 stardict-2.4.3.tar.bz2 773769
