@@ -1,6 +1,11 @@
 # ChangeLog for app-dicts/stardict
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/stardict/Attic/ChangeLog,v 1.18 2004/08/19 21:40:04 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/stardict/Attic/ChangeLog,v 1.19 2004/09/22 17:44:45 liquidx Exp $
+
+*stardict-2.4.3 (22 Sep 2004)
+
+  22 Sep 2004; Alastair Tse <liquidx@gentoo.org> +stardict-2.4.3.ebuild:
+  version bump
 
   19 Aug 2004; foser <foser@gentoo.org> stardict-2.2.1,2.4.1.ebuild :
   Also fix for gtk+-2.4 issues (#45791)
